CI Added, readme updated, docker created